# flatehr

./: CHANGELOG.md  Makefile  README.md  composition.py  importer.py  pyproject.toml  test_composition.py  tree.py
.github/workflows/: main.yaml  release-please.yml
docker/: Dockerfile
docs/reports/: flake8stats.txt
docs/reports/junit/: junit.xml
examples/: xml_source.py
flatehr/: __init__.py  build.py  client.py  composition.py  converters.py  core.py  data_types.py  factory.py  flat.py  helpers.py  http.py  ingest.py  inspect_template.py  mappers.py  serializers.py  sources.py  template.py
flatehr/anytree/: _node.py  composition.py  template.py
flatehr/cli/: entrypoint.py  generate.py  inspect_template.py
flatehr/impl/: anytree_core.py
flatehr/integration/: __init__.py  converters.py  destinations.py  sources.py
flatehr/rm/: __init__.py  factory.py  models.py
flatehr/sources/: base.py  json.py  xml.py
openehr_client/: composition.py  data_types.py  flat.py
reports/junit/: junit.xml
scripts/: ingest.sh
tests/: conftest.py  flatehr_udf.py  test_build.py  test_cli.py  test_cli.sh  test_composition.py  test_docker.sh  test_flat.py  test_ingest.py  test_mappers.py  test_rm.py  test_sources.py  test_template.py
tests/resources/: aql_path_missing_webtemplate.json  complex_template.json  expected_composition.json  expected_inspect.txt  json_conf.yaml  json_conf_udf.yaml  mapping.yaml  source.json  source.xml  template.opt  web_template.json  xml_conf.yaml
utils/rm/: generate_rm.py  openehr_rm_1.1.0_all.json
utils/rm/templates/: BaseModel.jinja2
