[tool.poetry]
name = "flatehr"
version = "0.0.0"
description = ""
authors = ["Mauro Del Rio <mauro@crs4.it>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
anytree = "2.8.0"
deepdiff = "^5.5.0"
tqdm = "^4.62.3"
clize = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^6.3.3"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

