[tool.poetry]
name = "flatehr"
version = "0.0.0"
description = ""
authors = ["Mauro Del Rio <mauro@crs4.it>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
anytree = "2.8.0"
deepdiff = "^5.5.0"
tqdm = "^4.62.3"
clize = "^4.2.1"
pipe = "^2.0"
Pynject = "^0.4.1"
pydantic = "1.9.0"
lxml = "^4.9.0"
Jinja2 = "^3.1.2"
jq = "^1.2.2"
python-dateutil = "^2.8.2"
jsonpath-ng = "^1.5.3"
defopt = "^6.4.0"
pyaml = "^21.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^6.3.3"
datamodel-code-generator = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = false
style = "semver"

[tool.poetry.scripts]
flatehr = "flatehr.cli.entrypoint:main"

[tool.semantic_release]
version_variable = [
    "flatehr/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
