[tool.poetry]
name = "flatehr"
version = "1.1.0"
description = "Tool for generating openEHR compositions from other formats"
authors = ["Mauro Del Rio <mauro@crs4.it>"]
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/crs4/flatehr"
include = [
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8"
anytree = "2.8.0"
pipe = "^2.0"
lxml = "^4.9.0"
Jinja2 = "^3.1.2"
jq = "^1.2.2"
python-dateutil = "^2.8.2"
jsonpath-ng = "^1.5.3"
defopt = "^6.4.0"
pyaml = "^21.10.1"
python-semantic-release = "^7.31.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = "^6.3.3"
genbadge = {extras = ["all"], version = "^1.1.0"}

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = false
style = "semver"

[tool.poetry.scripts]
flatehr = "flatehr.cli.entrypoint:main"

[tool.semantic_release]
version_variable = [
    "flatehr/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
